--- a/backend/package.json
+++ b/backend/package.json
@@ -43,11 +43,13 @@
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "pdf-parse": "^1.1.1",
+    "rate-limiter-flexible": "^5.0.3",
     "redis": "^4.6.11",
     "sharp": "^0.33.1",
     "socket.io": "^4.7.4",
     "socket.io-client": "^4.8.3",
     "stripe": "^20.3.1",
+    "uuid": "^9.0.1",
     "winston": "^3.11.0"
   },
   "devDependencies": {
@@ -68,6 +70,7 @@
     "@types/passport-google-oauth20": "^2.0.14",
     "@types/passport-jwt": "^3.0.13",
     "@types/supertest": "^6.0.3",
+    "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^6.13.1",
     "@typescript-eslint/parser": "^6.13.1",
     "eslint": "^8.55.0",
